2021-05-19 David Anderson
    * exfail.py,showpct.py,trimsimple.py,usertime.py:
      Reformatted with the 'black' formatter.
    * python3/checksize.py,python3/exfail.py,
      python3/filterpathto.py,python3/noticegoff.py,
      python3/showpct.py,python3/showruntime.py,
      python3/trimdate.py,python3/trimsimple.py,
      python3/usertime.py: Reformatted with the 'black' formatter.
2021-05-18 David Anderson
    * dwarfdump-i386-freebsd.O,dwarfdump-s390.O,
      dwarfdump-x86_64-freebsd.O,dwarfdump-x86_64-ubuntu.O:
      New baseline executables.

2021-05-18 David Anderson
    * dwarfdump.conf: Corrected some commentary.
    * dwgenc/testoutput.o: it's recreated on every run
      (by dwarfgen) so this is not a meaninful change.
      But is ok.
2021-05-18 David Anderson
    * diederen6/implicit_const_example.so: Example exposed
      libdwarf error reading DW_FORM_LINE_strp and dealing with
      DW_FORM_implicit const.
2021-05-13 David Anderson
    * dwarfextract/dwarfextract.c: Now does "dwarf.h"
      and "libdwarf.h" not the <> form, so we get
      the versions under test, not older ones.
    * dwarfextract/runtest.sh: Now adds -I to
      get access to the libdwarf/dwarf.h
2021-01-31 David Anderson
    * DWARFTEST.sh cleaned up some FAIL messages
      so they read more usefully.

        Now matches libdwarf/dwarfdump git log id of today:
        0c441c3351b2b3b276914609eb7eb0db9cd8c516

    * dwarfdump-i386-freebsd.O,dwarfdump-s390.O,
      dwarfdump-x86_64-freebsd.O,dwarfdump-x86_64-ubuntu.O:
      New baseline executables.

        Fixed diff here so it compares in the right old vs new
        way rather than the new vs old way.
    * dwgenc/runtest.sh: Fixed diff here so it
      compares in the right old vs new way rather than
      the new vs old way.

      Updated baselines of the following:
    * debugfission/archivedwo-iMvvv.base.gz
    * debugfission/archivedwo.base.gz
    * debugfission/targetdwo.base.gz
    * dwgenc/base.stdout