@@ -72,7 +72,8 @@ main(int argc, char **argv)
     if(fd < 0) {
         printf("Failure attempting to open %s\n",filepath);
     }
-    res = dwarf_init(fd,DW_DLC_READ,errhand,errarg, &dbg,&error);
+    res = dwarf_init_b(fd,DW_DLC_READ,
+        DW_GROUPNUMBER_ANY,errhand,errarg, &dbg,&error);
     if(res != DW_DLV_OK) {
         printf("Giving up, cannot do DWARF processing\n");
         exit(1);
