@@ -54,7 +54,8 @@ int main() {
   Dwarf_Error dwarf_err;
   
   fd = open("orig.a.out", O_RDONLY);
-  if (dwarf_init(fd, DW_DLC_READ, NULL, NULL, &dbg, &err) != DW_DLV_OK) {
+  if (dwarf_init_b(fd, DW_DLC_READ,
+    DW_GROUPNUMBER_ANY,NULL, NULL, &dbg, &err) != DW_DLV_OK) {
     printf("Error\n");
     return 1;
   }
