@@ -1,3 +1,9 @@
+2021-06-18 David Anderson
+    * DWARFTEST.sh, PICKUPBIN.sh, configure.ac:
+      Changed to match up with the new source tree layout,
+    * findcu/cutest.c,test-alex1/test.c,testoffdie/testoffdie.c,
+      dwarfextract/dwarfextract.c: Updated calls to libdwarf
+      to stop using obsolete functions.
 2021-05-19 David Anderson
     * exfail.py,showpct.py,trimsimple.py,usertime.py:
       Reformatted with the 'black' formatter.
